# Youtube-Downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  elmo.txt  main.py  pyproject.toml  run-ytdl-local.bat  run-ytdl-local.sh  ytd.bat  ytd.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  secret-scan.yml
src/youtube_downloader/: cli.py
tests/: test_cli_defaults.py
