[project]
name = "youtube-downloader"
version = "0.1.0"
description = "Local command-line YouTube downloader/converter/transcriber"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.12.8",
    "faster-whisper>=1.2.1",
]

[project.scripts]
ytd = "youtube_downloader.cli:main"
ytdl-local = "youtube_downloader.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
